# iot-fuzzy-llm-hybrid-control

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_bridge.py  test_grpc.py
.sisyphus/evidence/: task-5-bridge-not-running.txt  task-5-bridge-status.json  task-5-no-mqtt.txt  task-9-cli-integration.txt  task-9-mqtt-integration.txt
.sisyphus/notepads/web-cli-fixes/: learnings.md
config/: README.md  devices.json  llm_config.json  mqtt_config.json  prompt_template.txt
config/membership_functions/: README.md  humidity.json  light_level.json  motion.json  temperature.json
config/schemas/: devices.schema.json  llm.schema.json  membership_functions.schema.json  mqtt.schema.json
docker/: README.md
docker/app/: Dockerfile  entrypoint.sh  healthcheck.py
docker/mosquitto/: Dockerfile  entrypoint.sh  mosquitto.conf
docker/ollama/: Dockerfile  entrypoint.sh
docker/simulator/: Dockerfile
docs/: README.md  add.md  demo-troubleshooting.md  demo-walkthrough.md  engineering-tasks.md  project-brief.md  srs.md  wbs.md
docs/dev/: add.md  cli-grpc-audit.md  debug.md  engineering-tasks.md  new-additions.md  project-brief.md  srs.md  thesis-setup.md  wbs.md
docs/review/: review-fixes-report.md  review-problems.md
docs/user/: api-reference.md  configuration-guide.md  demo-troubleshooting.md  demo-walkthrough.md  evaluation-report.md  example-rules.md  installation-guide.md  mqtt-flexibility-guide.md  schema-reference.md  user-guide.md  web-ui-guide.md
logs/: README.md
protos/: common.proto  config.proto  devices.proto  lifecycle.proto  logs.proto  membership.proto  rules.proto
rules/: README.md  active_rules.json
scripts/: fix_protobuf_imports.py  simulate_devices.py
src/: AGENTS.md  README.md  application.py  main.py
src/common/: __init__.py  config.py  exceptions.py  logging.py  utils.py
src/configuration/: AGENTS.md  README.md  __init__.py  config_manager.py  logging_manager.py  rule_manager.py  system_orchestrator.py
src/control_reasoning/: AGENTS.md  README.md  __init__.py  command_generator.py  command_validator.py  conflict_resolver.py  ollama_client.py  prompt_builder.py  response_parser.py  rule_interpreter.py  rule_pipeline.py
src/data_processing/: AGENTS.md  README.md  __init__.py  fuzzy_engine.py  fuzzy_pipeline.py  linguistic_descriptor.py  membership_functions.py
src/device_interface/: AGENTS.md  README.md  __init__.py  communication_manager.py  device_monitor.py  messages.py  models.py  mqtt_client.py  payload_formatter.py  registry.py  topic_resolver.py
src/interfaces/: AGENTS.md  README.md  __init__.py  __main__.py  cli.py
src/interfaces/rpc/: AGENTS.md  __init__.py  client.py  error_mapping.py  server.py
src/interfaces/web/: AGENTS.md  __init__.py  bridge.py  data_queue.py  http_client.py  session.py  streamlit_app.py
tests/: README.md  conftest.py
tests/integration/: __init__.py  test_docker_env_vars.py  test_mqtt_flexibility.py  test_web_integration.py
tests/test_common/: test_config.py  test_exceptions.py  test_logging.py  test_utils.py
tests/test_configuration/: README.md  test_config_manager.py  test_logging_manager.py  test_rule_manager.py  test_system_orchestrator.py
tests/test_control_reasoning/: README.md  test_command_generator.py  test_command_validator.py  test_conflict_resolver.py  test_ollama_client.py  test_prompt_builder.py  test_response_parser.py  test_rule_interpreter.py  test_rule_pipeline.py
tests/test_data_processing/: README.md  test_fuzzy_engine.py  test_fuzzy_pipeline.py  test_linguistic_descriptor.py  test_membership_functions.py
tests/test_device_interface/: README.md  test_communication_manager.py  test_device_monitor.py  test_messages.py  test_models.py  test_mqtt_client.py  test_payload_formatter.py  test_registry.py  test_topic_resolver.py
tests/test_e2e/: conftest.py  test_cli_grpc_integration.py  test_docker_e2e.py  test_smoke.py  test_web_cli_integration.py  test_web_grpc_integration.py
tests/test_interfaces/: README.md  test_cli.py
tests/test_interfaces/test_cli/: test_cli.py  test_config_migrate.py
tests/test_interfaces/test_rpc/: test_client.py  test_config_servicer.py  test_devices_servicer.py  test_error_mapping.py  test_lifecycle_servicer.py  test_logs_servicer.py  test_membership_servicer.py  test_rules_servicer.py  test_server.py
tests/test_interfaces/test_web/: __init__.py  conftest.py  test_app.py  test_bridge.py  test_data_queue.py  test_http_client.py  test_session.py
tests/test_main/: README.md  test_accuracy.py  test_application.py  test_e2e_integration.py  test_performance.py  test_placeholder.py  test_stress.py
(+24 files in other folders)
